<resources>
    <string name="app_name">Code Factory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_skip_label">Skip</string>
    <string name="splash_screen_image_content_description">Splash screen image</string>
    <string name="splash_screen_title">CodeFactory</string>
    <string name="onboarding_body_text">Quarantine is the perfect time to spend your day learning something new, from anywhere!</string>
    <string name="first_onboarding_screen_image">First onboarding screen image</string>
    <string name="first_onboarding_screen_title">Learn anywhere and anytime</string>
    <string name="next">Next</string>
    <string name="second_onboarding_screen_title">Find a course for you</string>
    <string name="second_onboarding_screen_image">Second onboarding screen image</string>
    <string name="third_onboarding_screen_image">Third onboarding screen image</string>
    <string name="third_onboarding_screen_title">Improve your skills</string>
    <string name="lets_start">Let\'s Start</string>
</resources>